[workspace]
resolver = "2"

members = [
	"bin/*/node",
	"bin/*/runtime",
	"fuzz/*",
	"modules/*",
	"primitives/*",
	"relays/*",
]

[patch."https://github.com/paritytech/polkadot"]
polkadot-approval-distribution = { path = "/home/svyatonik/dev/polkadot/node/network/approval-distribution" }
polkadot-availability-bitfield-distribution = { path = "/home/svyatonik/dev/polkadot/node/network/bitfield-distribution" }
polkadot-availability-distribution = { path = "/home/svyatonik/dev/polkadot/node/network/availability-distribution" }
polkadot-availability-recovery = { path = "/home/svyatonik/dev/polkadot/node/network/availability-recovery" }
polkadot-collator-protocol = { path = "/home/svyatonik/dev/polkadot/node/network/collator-protocol" }
polkadot-dispute-distribution = { path = "/home/svyatonik/dev/polkadot/node/network/dispute-distribution" }
polkadot-gossip-support = { path = "/home/svyatonik/dev/polkadot/node/network/gossip-support" }
polkadot-network-bridge = { path = "/home/svyatonik/dev/polkadot/node/network/bridge" }
polkadot-node-collation-generation = { path = "/home/svyatonik/dev/polkadot/node/collation-generation" }
polkadot-node-core-approval-voting = { path = "/home/svyatonik/dev/polkadot/node/core/approval-voting" }
polkadot-node-core-av-store = { path = "/home/svyatonik/dev/polkadot/node/core/av-store" }
polkadot-node-core-backing = { path = "/home/svyatonik/dev/polkadot/node/core/backing" }
polkadot-node-core-bitfield-signing = { path = "/home/svyatonik/dev/polkadot/node/core/bitfield-signing" }
polkadot-node-core-candidate-validation = { path = "/home/svyatonik/dev/polkadot/node/core/candidate-validation" }
polkadot-node-core-chain-api = { path = "/home/svyatonik/dev/polkadot/node/core/chain-api" }
polkadot-node-core-chain-selection = { path = "/home/svyatonik/dev/polkadot/node/core/chain-selection" }
polkadot-node-core-dispute-participation = { path = "/home/svyatonik/dev/polkadot/node/core/dispute-participation" }
polkadot-node-core-parachains-inherent = { path = "/home/svyatonik/dev/polkadot/node/core/parachains-inherent" }
polkadot-node-core-provisioner = { path = "/home/svyatonik/dev/polkadot/node/core/provisioner" }
polkadot-node-core-pvf = { path = "/home/svyatonik/dev/polkadot/node/core/pvf" }
polkadot-node-core-runtime-api = { path = "/home/svyatonik/dev/polkadot/node/core/runtime-api" }
polkadot-node-core-dispute-coordinator = { path = "/home/svyatonik/dev/polkadot/node/core/dispute-coordinator" }
polkadot-node-network-protocol = { path = "/home/svyatonik/dev/polkadot/node/network/protocol" }
polkadot-node-subsystem-util = { path = "/home/svyatonik/dev/polkadot/node/subsystem-util" }
polkadot-overseer = { path = "/home/svyatonik/dev/polkadot/node/overseer" }
polkadot-primitives = { path = "/home/svyatonik/dev/polkadot/primitives" }
polkadot-runtime-parachains = { path = "/home/svyatonik/dev/polkadot/runtime/parachains" }
polkadot-statement-distribution = { path = "/home/svyatonik/dev/polkadot/node/network/statement-distribution" }

polkadot-runtime-common = { path = "/home/svyatonik/dev/polkadot/runtime/common" }

polkadot-client = { path = "/home/svyatonik/dev/polkadot/node/client" }
polkadot-core-primitives = { path = "/home/svyatonik/dev/polkadot/core-primitives" }
polkadot-node-primitives = { path = "/home/svyatonik/dev/polkadot/node/primitives" }
polkadot-node-subsystem = { path = "/home/svyatonik/dev/polkadot/node/subsystem" }
pallet-xcm = { path = "/home/svyatonik/dev/polkadot/xcm/pallet-xcm" }
polkadot-parachain = { path = "/home/svyatonik/dev/polkadot/parachain" }
polkadot-rpc = { path = "/home/svyatonik/dev/polkadot/rpc" }
polkadot-service = { path = "/home/svyatonik/dev/polkadot/node/service" }
polkadot-test-runtime = { path = "/home/svyatonik/dev/polkadot/runtime/test-runtime" }
polkadot-test-service = { path = "/home/svyatonik/dev/polkadot/node/test/service" }
xcm = { path = "/home/svyatonik/dev/polkadot/xcm" }
xcm-builder = { path = "/home/svyatonik/dev/polkadot/xcm/xcm-builder" }
xcm-executor = { path = "/home/svyatonik/dev/polkadot/xcm/xcm-executor" }
xcm-procedural = { path = "/home/svyatonik/dev/polkadot/xcm/procedural" }
